--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.2",
     "antd": "^4.15.3",
+    "apexcharts": "^3.28.1",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "history": "^4.9.0",
     "js-cookie": "^2.2.1",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-banners": "^1.0.7",
     "react-bootstrap": "^1.4.0",
     "react-chartjs-2": "^2.11.1",
