--- a/package.json
+++ b/package.json
@@ -17,18 +17,22 @@
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-banners": "^1.0.7",
+    "react-big-calendar": "^0.35.0",
     "react-bootstrap": "^1.4.0",
+    "react-calendar": "^3.4.0",
     "react-chartjs-2": "^2.11.1",
     "react-confirm-alert": "^2.6.2",
     "react-cookie": "^4.0.3",
     "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.2",
+    "react-native-calendars": "^1.1266.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-select": "^4.3.0",
     "react-table": "^7.6.3",
     "react-toastify": "^7.0.4",
+    "reactstrap": "^8.9.0",
     "recharts": "^2.0.9",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
