--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "history": "^4.9.0",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
+    "konva": "^8.1.3",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
@@ -29,6 +30,8 @@
     "react-cookie": "^4.0.3",
     "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.2",
+    "react-konva": "^17.0.2-5",
+    "react-native": "^0.65.1",
     "react-native-calendars": "^1.1266.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -37,8 +40,8 @@
     "react-svg-radar-chart": "^1.3.0",
     "react-table": "^7.6.3",
     "react-toastify": "^7.0.4",
-    "reactstrap": "^8.9.0",
     "react-tooltip": "^4.2.21",
+    "reactstrap": "^8.9.0",
     "recharts": "^2.0.9",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
